--- a/styles.css
+++ b/styles.css
@@ -28,13 +28,8 @@
   border: 1px solid lightgray;
   padding: 10px;
 }
-.message__text.saved {
+.saved {
   background: lightgray;
-}
-.message__text.saved:after {
-  content: "*saved";
-  font-weight: bold;
-  color: green;
 }
 
 .message__send {
